--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
    background-color: #f1f1f1;
    position: relative;
    width: 100vw;
-   height: 900px;
 }
 
 .imglogo {
@@ -22,25 +21,17 @@ body {
 .hero {
    width: 100vw;
    position: relative;
-   top: 100px;
-}
-
-#navbar {
-   border: 0;
-   border-top: 5px solid #cbcbcb;
-   margin: 1em 0;
-   padding: 0;
+   top: 3vw;
 }
 
 nav {
    position: relative;
-   float: left;
-   top: -680px;
-   left: 420px;
    width: 50%;
-   font-family: Lato, sans-serif;
+   font-family: 'Avenir Next Condensed', sans-serif;
    font-weight: 300;
-   font-size: 20px;
+   font-size: 1vw;
+   margin: 0 auto;
+   top: -66vw;
 }
 
 nav ul {
@@ -56,7 +47,7 @@ nav ul li {
 }
 
 nav ul li a {
-   display: block;
+   display: inline-block;
    color: #808080;
 }
 
@@ -68,7 +59,7 @@ nav ul li a {
 h1 {
    font-family: 'Avenir Next Condensed', Nunito, sans-serif;
    font-weight: 500;
-   font-size: 70px;
+   font-size: 4vw;
    color: #808080;
    text-align: center;
    position: relative;
@@ -79,7 +70,7 @@ h1 {
 p {
    font-family: 'Avenir Next Condensed', Nunito, sans-serif;
    font-weight: 200;
-   font-size: 30px;
+   font-size: 2vw;
    color: #808080;
    text-align: center;
    position: relative;
@@ -87,16 +78,20 @@ p {
    margin-bottom: 100px;
 }
 
+.box1 {
+  display: inline-block;
+  position: relative;
+
+}
+
 .About {
    width: 385px;
    height: 70px;
-   position: relative;
-   left: 113px;
    background-color: #fedcd2;
    border: 5px solid rgb(227, 227, 227);
    font-family: 'Avenir Next Condensed', Nunito, sans-serif;
    font-weight: 300;
-   font-size: 30px;
+   font-size: 2vw;
    color: #808080;
    transition: all 500ms ease;
 }
@@ -108,16 +103,13 @@ p {
 }
 
 .Porfolio {
-   display: inline-block;
-   position: relative;
-   left: 125px;
    width: 385px;
    height: 70px;
    background-color: #fedcd2;
    border: 5px solid rgb(227, 227, 227);
    font-family: 'Avenir Next Condensed', Nunito, sans-serif;
    font-weight: 300;
-   font-size: 30px;
+   font-size: 2vw;
    color: #808080;
    transition: all 500ms ease;
 }
@@ -129,16 +121,13 @@ p {
 }
 
 .Contact {
-   display: inline-block;
-   position: relative;
-   left: 135px;
    width: 385px;
    height: 70px;
    background-color: #fedcd2;
    border: 5px solid rgb(227, 227, 227);
    font-family: 'Avenir Next Condensed', Nunito, sans-serif;
    font-weight: 300;
-   font-size: 30px;
+   font-size: 2vw;
    color: #808080;
    transition: all 500ms ease;
 }
@@ -147,30 +136,4 @@ p {
    background: rgba(0, 0, 0, 0);
    color: #fedcd2;
    box-shadow: 0 0 0 3px rgb(227, 227, 227);
-}
-
-.aboutme {
-   position: relative;
-   top: 20px;
-   left: 270px;
-}
-
-.portfolioicon {
-   position: relative;
-   top: 20px;
-   left: 600px;
-}
-
-.contactme {
-   position: relative;
-   top: -5px;
-   left: 930px;
-}
-
-#container2 {
-   background-color: #f1f1f1;
-   position: relative;
-   top: 100px;
-   width: 100%;
-   height: 100px;
 }
