--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,37 @@ body {
    background-color: transparent;
    text-align: center;
    margin: 0;
+   padding: 0;
 }
 
-#container {
-   background-color: #f1f1f1;
-   position: relative;
-   width: 100vw;
-}
+
 
 .imglogo {
    display: inline-block;
-   width: 208px;
-   height: 91px;
+   width: 218px;
+   height: 101px;
    position: relative;
    margin-top: 5vh;
 }
 
 .hero {
-   width: 100vw;
+   display: inline-block;
+   width: 100%;
    position: relative;
-   top: 3vw;
+   top: 1em;
 }
 
 nav {
    position: relative;
-   width: 50%;
-   font-family: 'Avenir Next Condensed', sans-serif;
-   font-weight: 300;
-   font-size: 1vw;
+   width: 100%;
+   font-family: Arial Narrow, sans-serif;
+   font-weight: 800;
+   font-size: 1em;
    margin: 0 auto;
-   top: -66vw;
+   top: -70vw;
 }
 
 nav ul {
-   width: 100%;
    list-style: none;
    margin: 0;
    padding: 0;
@@ -52,54 +49,40 @@ nav ul li a {
 }
 
 #home {
-   font-weight: 900;
+   font-weight: 500;
    color: #fedcd2;
 }
 
 h1 {
-   font-family: 'Avenir Next Condensed', Nunito, sans-serif;
-   font-weight: 500;
-   font-size: 4vw;
-   color: #808080;
-   text-align: center;
+   font-family: Arial Narrow, sans-serif;
+   font-weight: 100;
+   font-size: 6vw;
+   color: #fedcd2;
+   text-align: left;
    position: relative;
-   margin-top: 100px;
+   margin-top: -50vw;
+   margin-left: 20vw;
    margin-bottom: 0;
 }
 
 p {
-   font-family: 'Avenir Next Condensed', Nunito, sans-serif;
-   font-weight: 200;
+   font-family: Arial Narrow, sans-serif;
+   font-style: italic;
    font-size: 2vw;
-   color: #808080;
-   text-align: center;
+   color: #fffafa;
+   text-align: left;
    position: relative;
    margin-top: 20px;
-   margin-bottom: 100px;
+   margin-left: 20vw;
+
+
 }
 
 .box1 {
-  display: inline-block;
-  position: relative;
-
-}
-
-.About {
-   width: 385px;
-   height: 70px;
-   background-color: #fedcd2;
-   border: 5px solid rgb(227, 227, 227);
-   font-family: 'Avenir Next Condensed', Nunito, sans-serif;
-   font-weight: 300;
-   font-size: 2vw;
-   color: #808080;
-   transition: all 500ms ease;
-}
-
-.About:hover {
-   background: rgba(0, 0, 0, 0);
-   color: #fedcd2;
-   box-shadow: 0 0 0 3px rgb(227, 227, 227);
+  position: absolute;
+  margin-top: 70px;
+  margin-left: 20vw;
+  z-index: 99;
 }
 
 .Porfolio {
@@ -107,11 +90,13 @@ p {
    height: 70px;
    background-color: #fedcd2;
    border: 5px solid rgb(227, 227, 227);
-   font-family: 'Avenir Next Condensed', Nunito, sans-serif;
-   font-weight: 300;
-   font-size: 2vw;
+   font-family: Arial Narrow, sans-serif;
+   font-weight: 800;
+   font-size: 30px;
+   font-style: italic;
    color: #808080;
    transition: all 500ms ease;
+
 }
 
 .Porfolio:hover {
@@ -120,20 +105,19 @@ p {
    box-shadow: 0 0 0 3px rgb(227, 227, 227);
 }
 
-.Contact {
-   width: 385px;
-   height: 70px;
-   background-color: #fedcd2;
-   border: 5px solid rgb(227, 227, 227);
-   font-family: 'Avenir Next Condensed', Nunito, sans-serif;
-   font-weight: 300;
-   font-size: 2vw;
-   color: #808080;
-   transition: all 500ms ease;
-}
+@media screen and (max-width: 1231px) {
+  .box1 {
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 20vw;
+    z-index: 99;
+  }
 
-.Contact:hover {
-   background: rgba(0, 0, 0, 0);
-   color: #fedcd2;
-   box-shadow: 0 0 0 3px rgb(227, 227, 227);
+  .Porfolio {
+     width: 125px;
+     height: 37px;
+     font-weight: 800;
+     font-size: 10px;
+     border: 2px solid rgb(227, 227, 227);
+  }
 }
